// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectContext should allow non-object context if a custom mapContextToProps function is provided 1`] = `
<div>
  <p>
    Sup my frand
  </p>
  <div>
    I have looked into context and I've seen the color is: 
    #00ff00
    I also get my own props like 
    sup
    !
  </div>
</div>
`;

exports[`connectContext should also pass ownProps to mapContextToProps 1`] = `
<div>
  <p>
    Sup my frand
  </p>
  <div>
    I have looked into context and I've seen the color is: 
    #00ff00
    I also get my own props like 
    !
  </div>
</div>
`;

exports[`connectContext should map context to props while preserving existing props 1`] = `
<div>
  <div>
    <p>
      Hello
    </p>
    <div>
      I have looked into context and I've seen the color is: 
      green
      I also get my own props like 
      test
      !
    </div>
  </div>
</div>
`;

exports[`connectContext should use the custom mapContextToProps function if provided 1`] = `
<div>
  <p>
    Sup my frand
  </p>
  <div>
    I have looked into context and I've seen the color is: 
    #00ff00
    I also get my own props like 
    sup
    !
  </div>
</div>
`;

exports[`connectContext should use the custom mergeProps function if provided 1`] = `
<div>
  <p>
    Sup my frand
  </p>
  <div>
    I have looked into context and I've seen the color is: 
    green
    I also get my own props like 
    sup
    !
  </div>
</div>
`;
